--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 html {
   box-sizing: border-box;
 }
@@ -13,7 +12,7 @@ html {
 body {
   min-width: 320px;
   margin: 0;
-  font-family:'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   font-weight: 400px;
   line-height: 1;
   background-color: #f7f7f7;
@@ -36,8 +35,8 @@ button, input {
 }
 
 h1, h2, h3, p, ul {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
@@ -56,4 +55,3 @@ h1, h2, h3, p, ul {
   width: 1px !important;
   overflow: hidden;
 }
-
