--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,57 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300400500&display=swap');
 
 html
-    box-sizing: border-box;
+    box-sizing: border-box
 
 *,
 *::before,
 *::after 
-    box-sizing: inherit;
+    box-sizing: inherit
 
 body
-    min-width: 320px;
-    margin: 0;
-    font-family: Poppins, sans-serif;
-    font-weight: 400px;
-    line-height: 1;
-    background-color: #f7f7f7;
-    color: #333333;
+    min-width: 320px
+    margin: 0
+    font-family: Poppins, sans-serif
+    font-weight: 400px
+    line-height: 1
+    background-color: #f7f7f7
+    color: #333333
 
 a
-    text-decoration: none;
-    color: inherit;
+    text-decoration: none
+    color: inherit
 
 ul
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  list-style: none
+  padding: 0
+  margin: 0
 
 
 button, input
-  font: inherit;
+  font: inherit
 
 
 h1, h2, h3, p, ul
-    padding: 0;
-    margin: 0;
+    padding: 0
+    margin: 0
 
 
 .container
-  padding-left: 75px;
-  padding-right: 75px;
-  max-width: 1920px;
-  margin: auto;
+  padding-left: 75px
+  padding-right: 75px
+  max-width: 1920px
+  margin: auto
 
 
 .visually-hidden
-  position: absolute !important;
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
+  position: absolute !important
+  clip: rect(1px, 1px, 1px, 1px)
+  padding: 0 !important
+  border: 0 !important
+  height: 1px !important
+  width: 1px !important
+  overflow: hidden
 
 
+.header
+    border-bottom: 1px solid black
+    padding: 20px 0px
+
+.header__nav
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+
+.header__login-buttons-group
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    min-width: 150px
+
+.header__logo
+    font-size: 30px
+    font-weight: 500
+
+.header__logo-text
+
+.header__logo-round
+
+.header__item
+
+.header__login-button
+
+
+.main
+.hero
+.hero__container
+.hero__item
+.hero__text
+.hero__text-small
+.hero__list
+.hero__items
+.hero__button
+.image
+.advantages
+.advantages__container
+.h3
+.advantages__cards
+.advantages__card
+.card__header
+.card__icon
+.card__text
+.footer
 
 
