--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,63 @@ h1, h2, h3, p, ul {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  min-width: 150px;
+  min-width: 200px;
 }
 
-.header__logo {
+.header__logo-text {
   font-size: 30px;
   font-weight: 500;
+}
+
+.header__logo-round {
+  display: inline-block;
+  background-color: red;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.header__login-button {
+  display: inline-block;
+  border: 1px solid red;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 90vh;
+}
+
+.hero__item {
+  width: 50%;
+}
+
+.hero__image {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.hero__text {
+  font-size: 60px;
+  padding-bottom: 30px;
+}
+
+.hero__text-small {
+  padding-bottom: 30px;
+  max-width: 70%;
+  line-height: 30px;
+}
+
+.image {
+  width: 100%;
+  height: 50%;
+  background-image: url(../img/img1.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
