--- a/sass/style.sass
+++ b/sass/style.sass
@@ -69,8 +69,6 @@ h1, h2, h3, p, ul
     align-items: center
     min-width: 200px
 
-.header__logo
-    
 
 .header__logo-text
     font-size: 30px
@@ -94,12 +92,14 @@ h1, h2, h3, p, ul
 
 .main
 .hero
+    
 .hero__container
     display: flex
     flex-direction: row
     justify-content: space-between
     align-items: center
     height: 90vh
+    padding-top: 20px
 
 
 
@@ -131,14 +131,21 @@ h1, h2, h3, p, ul
     background-repeat: no-repeat
     background-size: contain
     background-position: center center
-.advantages
-.advantages__container
-.h3
-.advantages__cards
-.advantages__card
-.card__header
-.card__icon
-.card__text
+
+
 .footer
+    background-color: #E70000
+    height: 100%
+    padding: 20px 0px
 
+.footer__logo-text
+    font-size: 30px
+    font-weight: 500
+    color: white
 
+.footer__logo-round
+    display: inline-block
+    background-color: white
+    width: 15px
+    height: 15px
+    border-radius: 50%
