--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,5 @@
+// MAIN SECTION
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300400500&display=swap');
 
 html
@@ -52,6 +54,8 @@ h1, h2, h3, p, ul
   width: 1px !important
   overflow: hidden
 
+
+// START PAGE
 
 .header
     border-bottom: 1px solid black
@@ -121,9 +125,7 @@ h1, h2, h3, p, ul
     padding-bottom: 30px
     max-width: 70%
     line-height: 30px
-.hero__list
-.hero__items
-.hero__button
+
 .image
     width: 100%
     height: 50%
@@ -149,3 +151,5 @@ h1, h2, h3, p, ul
     width: 15px
     height: 15px
     border-radius: 50%
+
+//LOGIN PAGE
