--- a/sass/style.sass
+++ b/sass/style.sass
@@ -148,16 +148,22 @@ h1, h2, h3, p, ul
 .hero__form
     display: flex
     flex-direction: column
-    max-width: 300px
+    max-width: 400px
+    
+.login__form
+    .form__input
+        margin-bottom: 20px
 
 .form__input
-    border: 1px solid #E70000
-    margin-bottom: 20px
+    width: 100%
+    border: 1px solid grey
+    margin-bottom: 5px
     padding: 10px 15px
     border-radius: 10px
     font-size: 15px
 
 .form__button
+    text-align: center
     border: 1px solid #E70000
     padding: 10px 15px
     border-radius: 10px
@@ -176,3 +182,42 @@ h1, h2, h3, p, ul
 .hero__go-to-register
     font-size: 10px
     text-align: center
+
+.form__password-block
+    display: flex
+    flex-direction: column
+    padding-top: 30px
+
+.password__header
+    font-size: 12px
+    font-weight: bold
+    margin-bottom: 8px
+
+.password__message
+    font-size: 12px
+    margin-bottom: 5px
+
+.form__group
+    position: relative
+    min-height: 40px
+    margin-bottom: 20px
+
+.form__error-label
+    position: absolute
+    bottom: -10px
+    left: 15px
+    font-size: 10px
+    color: #E70000
+
+.length
+.symbols
+.big-letter
+.number
+
+
+.label-for-name
+
+.label-for-tel
+
+.label-for-email
+
