--- a/sass/style.sass
+++ b/sass/style.sass
@@ -103,6 +103,11 @@ h1, h2, h3, p, ul
 .hero__item
     width: 50%
 
+.hero__button
+    background: $main-color
+    color: white
+    font-size: 20px
+
 .hero__image
     height: 100%
     display: flex
@@ -188,7 +193,7 @@ h1, h2, h3, p, ul
 .form__password-block
     display: flex
     flex-direction: column
-    padding-top: 30px
+    margin-bottom: 20px
 
 .password__header
     font-size: 12px
@@ -252,6 +257,8 @@ h1, h2, h3, p, ul
 .transport__item
     border: 1px solid $main-color
     border-radius: 20px
+    margin-bottom: 20px
+
 .transport__card
     
     
