--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300400500&display=swap');
 
-$main-color: #E70000
+$main-color: #1A65DE
 
 html
     box-sizing: border-box
@@ -73,7 +73,6 @@ h1, h2, h3, p, ul
     flex-direction: row
     justify-content: space-between
     align-items: center
-    min-width: 200px
 
 .header__logo-text
     font-size: 30px
@@ -81,14 +80,14 @@ h1, h2, h3, p, ul
 
 .header__logo-round
     display: inline-block
-    background-color: red
+    background-color: $main-color
     width: 15px
     height: 15px
     border-radius: 50%
 
 .header__login-button
     display: inline-block
-    border: 1px solid red
+    border: 1px solid $main-color
     padding: 10px 20px
     border-radius: 10px
     
