--- a/sass/style.sass
+++ b/sass/style.sass
@@ -213,7 +213,7 @@ h1, h2, h3, p, ul
     bottom: -10px
     left: 15px
     font-size: 10px
-    color: $main-color
+    color: red
 
 
 // transport page
