--- a/sass/style.sass
+++ b/sass/style.sass
@@ -232,6 +232,7 @@ h1, h2, h3, p, ul
 .add__block
     width: 30%
     border-right: 1px solid $main-color
+    padding-left: 0px
 
 .list__block
     width: 70%
@@ -245,11 +246,6 @@ h1, h2, h3, p, ul
 .transport__header
     border-bottom: 1px solid $main-color
 
-.transport__form
-.form__input_transport
-    margin-bottom: 20px
-
-.transport__type-block
 .transport__add
     width: 120px
 
@@ -295,6 +291,15 @@ h1, h2, h3, p, ul
     font-weight: bold
 .info
     font-weight: normal
+
+.transport__type-block
+    margin-bottom: 20px
+    display: flex
+    align-items: center
+
+.form__radio
+    transform: translateY(-2px)
+
 
 .transport__name
 .transport__location
