--- a/sass/style.sass
+++ b/sass/style.sass
@@ -218,8 +218,8 @@ h1, h2, h3, p, ul
 
 // transport page
 
-.transport__main
-    height: 91vh
+// .transport__main
+//     height: 91vh
 
 .transport__container
     display: flex
@@ -227,7 +227,7 @@ h1, h2, h3, p, ul
     height: 100%
 
 .transport__block
-    padding: 70px 30px
+    padding: 70px 30px 170px
 
 .add__block
     width: 30%
@@ -267,14 +267,6 @@ h1, h2, h3, p, ul
     background-color: $main-color
 
 
-.transport__logo
-    right: 10px
-    top: 10px
-    position: absolute
-    width: 80px
-    height: 80px
-    border-radius: 15px
-    border: 1px solid $main-color
 .transport__driver
     font-size: 25px
     color: white
