--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,6 @@
 // MAIN SECTION
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300400500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300400500&display=swap')
 
 $main-color: #1A65DE
 
@@ -335,12 +335,25 @@ main
 .transport__type
 .transport__weather
 
+// side menu
+
+.orders__block
+
+.orders__menu
+
+.transport__list-header
+
+.orders__menu-list
+
+.orders__menu-item
+
+.order__menu-link
 
 
 // orders
 
 .orders__block
-    padding: 30px 30px
+    padding: 30px 0px 30px 80px
 
 .orders__menu
     width: 15%
@@ -348,4 +361,77 @@ main
     padding-left: 0px
 
 .orders__list
+    width: 85%
+.orders__block
+.orders__list
+.transport__list-header
+.orders__header
+    display: flex
+    flex-direction: row
+    align-items: center
+    margin-bottom: 40px
+    width: 100%
+.order__cards-header
+.order__cards-header-id
+.order__direction
+.order__cards-header-from
+.order__cards-header-to
+.order__cards-header-truck-type
+.order__cards-header-cargo
+.order__cards-header-load
+.order__cards-header-arrival
+.orders
+.order__cart
+    padding: 20px
+    border: 1px solid $main-color
+    border-radius: 15px
+    display: flex
+    flex-direction: row
+    align-items: center
+    margin-bottom: 20px
+    justify-content: space-between
+.order__description
+    font-weight: bold
+.order__direction
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    width: 30%
+.order__cargo-block
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    width: 15%
 
+.order__dash
+    border: 1px dashed $main-color
+    width: 20%
+    
+.order__id
+    font-weight: 300
+
+.order__dates
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+    width: 25%
+    
+.order__from
+.order__to
+.order__type
+    font-weight: 300
+    margin-right: 10px
+.order__cargo
+.order__temperature
+.order__load-date
+.order__unload-date
+.order__more-info-button
+.order__pick-up-button
+.order__buttons
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
