--- a/css/style.css
+++ b/css/style.css
@@ -272,21 +272,17 @@ main {
 }
 
 .transport__block {
-  padding: 70px 30px 170px;
+  padding: 30px 30px 170px;
 }
 
 .add__block {
-  width: 30%;
+  width: 25%;
   border-right: 1px solid #1A65DE;
   padding-left: 0px;
 }
 
 .list__block {
   width: 70%;
-}
-
-.transport__add-panel {
-  width: 80%;
 }
 
 .transport__list-header {
@@ -363,11 +359,11 @@ main {
 }
 
 .orders__block {
-  padding: 30px 0px 30px 80px;
+  padding: 30px 0px 30px 30px;
 }
 
 .orders__menu {
-  width: 15%;
+  padding-right: 30px;
   border-right: 1px solid #1A65DE;
   padding-left: 0px;
 }
@@ -429,7 +425,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 25%;
+  width: 20%;
 }
 
 .order__type {
@@ -437,9 +433,36 @@ main {
   margin-right: 10px;
 }
 
+.order__cargo {
+  font-weight: 300;
+}
+
+.order__more-info-button {
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 15px;
+}
+
+.order__pick-up-button {
+  background-color: #1A65DE;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  width: 100px;
+  border-radius: 10px;
+  margin-right: 15px;
+}
+
 .order__buttons {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.container_less-padding {
+  padding-left: 30px;
+  padding-right: 30px;
 }
