--- a/sass/style.sass
+++ b/sass/style.sass
@@ -256,18 +256,18 @@ main
     height: 100%
 
 .transport__block
-    padding: 70px 30px 170px
+    padding: 30px 30px 170px
 
 .add__block
-    width: 30%
+    width: 25%
     border-right: 1px solid $main-color
     padding-left: 0px
 
 .list__block
     width: 70%
 
-.transport__add-panel
-    width: 80%
+// .transport__add-panel
+//     width: 80%
 .transport__list-header
     font-size: 35px
     
@@ -353,10 +353,10 @@ main
 // orders
 
 .orders__block
-    padding: 30px 0px 30px 80px
+    padding: 30px 0px 30px 30px
 
 .orders__menu
-    width: 15%
+    padding-right: 30px
     border-right: 1px solid $main-color
     padding-left: 0px
 
@@ -417,7 +417,7 @@ main
     flex-direction: row
     align-items: center
     justify-content: space-between
-    width: 25%
+    width: 20%
     
 .order__from
 .order__to
@@ -425,13 +425,29 @@ main
     font-weight: 300
     margin-right: 10px
 .order__cargo
+    font-weight: 300
 .order__temperature
 .order__load-date
 .order__unload-date
 .order__more-info-button
+    background-color: white
+    border: 1px solid black
+    padding: 10px
+    border-radius: 10px
+    margin-right: 15px
 .order__pick-up-button
+    background-color: $main-color
+    border: none
+    color: white
+    padding: 10px 10px
+    width: 100px
+    border-radius: 10px
+    margin-right: 15px
 .order__buttons
     display: flex
     flex-direction: row
     align-items: center
     justify-content: space-between
+.container_less-padding
+    padding-left: 30px
+    padding-right: 30px
