--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ main {
 }
 
 .transport__list-header-margin {
-  margin-bottom: 40px;
+  margin-right: 100px;
 }
 
 .information__item {
@@ -499,9 +499,24 @@ main {
 .orders__header, .orders__nav-list {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .orders__nav-list {
   justify-content: space-between;
-  min-width: 400px;
+  align-items: center;
+  min-width: 500px;
+}
+
+.orders__navbutton {
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.navbutton-active {
+  background-color: #1A65DE;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 10px;
 }
