--- a/sass/style.sass
+++ b/sass/style.sass
@@ -307,7 +307,7 @@ main
     justify-content: space-between
 
 .transport__list-header-margin
-    margin-bottom: 40px
+    margin-right: 100px
 
 .information__item
     display: flex
@@ -438,7 +438,20 @@ main
 .orders__header, .orders__nav-list
     display: flex
     flex-direction: row
+    align-items: center
 
 .orders__nav-list
     justify-content: space-between
-    min-width: 400px
+    align-items: center
+    min-width: 500px
+
+.orders__navbutton
+    cursor: pointer
+    font-size: 25px
+
+.navbutton-active
+    background-color: $main-color
+    border: none
+    color: white
+    padding: 10px 10px
+    border-radius: 10px
