--- a/sass/style.sass
+++ b/sass/style.sass
@@ -479,3 +479,11 @@ main
     background-color: $main-color
     color: white
     cursor: pointer
+
+.cancel__button
+    background: grey
+    border: 1px solid grey
+    display: none
+
+.edit__button
+    display: none
