--- a/css/style.css
+++ b/css/style.css
@@ -550,3 +550,13 @@ main {
   color: white;
   cursor: pointer;
 }
+
+.cancel__button {
+  background: grey;
+  border: 1px solid grey;
+  display: none;
+}
+
+.edit__button {
+  display: none;
+}
